@@ -1,5 +1,53 @@
-Good morning everyone, yesterday I mainly focused on preparing for the Nexus upgrade scheduled for next Thursday. I decided not to use the Ansible playbook since the current Nexus setup has different file paths and login credentials, and doing the upgrade manually should reduce the risk of failure.
 
-I was in the middle of configuring the files but then my jumpbox suddenly disconnected due to the network outage.
-
-As for today, I’ll continue working on the Nexus upgrade and also shadow Riley and Philip on one of the OCP PBIs. That’s my plan for today.
+-Xms6G
+-Xmx6G
+-XX:MaxDirectMemorySize=15530M
+-XX:+UnlockDiagnosticVMOptions
+-XX:+LogVMOutput
+-XX:LogFile=/opt/nexus/nexus3/log/jvm.log
+-XX:-OmitStackTraceInFastThrow
+-Djava.net.preferIPv4Stack=true
+-Djavax.net.ssl.trustStore=/opt/nexus/ssl/nexus01.jks
+-Djavax.net.ssl.trustStorePassword=edrcmadm
+-Djavax.net.ssl.keyStore=/opt/nexus/ssl/nexus01.jks
+-Djavax.net.ssl.keyStorePassword=edrcmadm
+-Dkaraf.home=.
+-Dkaraf.base=.
+-Dkaraf.etc=etc/karaf
+-Djava.util.logging.config.file=etc/karaf/java.util.logging.properties
+-Dkaraf.data=/opt/nexus/sonatype-work/nexus3
+-Dkaraf.log=/opt/nexus/sonatype-work/nexus3/log
+-Djava.io.tmpdir=/opt/nexus/sonatype-work/nexus3/tmp
+-Dkaraf.startLocalConsole=false
+-Djdk.tls.ephemeralDHKeySize=2048
+#
+# additional vmoptions needed for Java9+
+#
+--add-reads=java.xml=java.logging
+--add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED
+--patch-module
+java.base=./lib/endorsed/org.apache.karaf.specs.locator-4.3.9.jar
+--patch-module
+java.xml=./lib/endorsed/org.apache.karaf.specs.java.xml-4.3.9.jar
+--add-opens
+java.base/java.security=ALL-UNNAMED
+--add-opens
+java.base/java.net=ALL-UNNAMED
+--add-opens
+java.base/java.lang=ALL-UNNAMED
+--add-opens
+java.base/java.util=ALL-UNNAMED
+--add-opens
+java.naming/javax.naming.spi=ALL-UNNAMED
+--add-opens
+java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
+--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
+--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED
+--add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
+--add-exports=java.base/sun.security.x509=ALL-UNNAMED
+--add-exports=java.base/sun.security.rsa=ALL-UNNAMED
+--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+        
